--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
