--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@/public/*": ["./public/*"],
       "@/components/*": ["components/*"]
     }
   },
