--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
-    "@elastic/eui": "^91.2.0",
+    "@elastic/eui": "^93.2.0",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@svgr/webpack": "^8.1.0",
+    "classnames": "^2.5.1",
     "moment": "^2.29.4",
     "next": "14.0.4",
     "prop-types": "^15.8.1",
